# Entry Points for PyInstaller
[options.entry_points]
pyinstaller40 =
    hook-dirs = accessible_output2.__pyinstaller:get_hook_dirs


[sdist]
formats=gztar

[bdist_wheel]
universal=1

[metadata]
name = bp-accessible-output2
version      = attr: accessible_output2.__version__
description = Speech and Braille output for python apps
;long-description = file: readme.rst
url = https://github.com/blindpandas/bp-accessible_output2
author       = Blind Pandas Team (original: Tyler Spivey<tspivey@pcdesk.net>)
author-email = info@blindpandas.com
license      = MIT
keywords     = a11y speech Braille
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Operating System :: Microsoft :: Windows
  License :: OSI Approved :: MIT License
  Topic :: Adaptive Technologies
  Topic :: Software Development :: Libraries
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
zip_safe = false
include_package_data = True
packages = find:
install_requires =
    bp-platform-utils
    pywin32==228;sys_platform=="win32"
    appscript;sys_platform=="Darwin"

[options.packages.find]
where=.
